--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
@@ -39,21 +39,19 @@
 {%         if handler.trigger is arista.avd.defined("on-maintenance")
             and handler.trigger_on_maintenance.operation is arista.avd.defined
             and handler.trigger_on_maintenance.action is arista.avd.defined %}
-{%             set on_maintenance_cli = [] %}
-{%             for trigger in ["bgp_peer", "interface", "unit"] %}
-{%                 if handler.trigger_on_maintenance[trigger] is arista.avd.defined %}
-{%                     if trigger == "bgp_peer" %}
-{%                         do on_maintenance_cli.append("bgp " ~ handler.trigger_on_maintenance.bgp_peer) %}
-{%                         if handler.trigger_on_maintenance.vrf is arista.avd.defined %}
-{%                             do on_maintenance_cli.append("vrf " ~ handler.trigger_on_maintenance.vrf) %}
-{%                         endif %}
-{%                     else %}
-{%                         do on_maintenance_cli.append(trigger ~ " " ~ handler.trigger_on_maintenance[trigger]) %}
-{%                     endif %}
+{%             set on_maintenance_cli = "" %}
+{%             if handler.trigger_on_maintenance.bgp_peer is arista.avd.defined %}
+{%                 set on_maintenance_cli = on_maintenance_cli ~ "bgp " ~ handler.trigger_on_maintenance.bgp_peer %}
+{%                 if handler.trigger_on_maintenance.vrf is arista.avd.defined %}
+{%                     set on_maintenance_cli = on_maintenance_cli ~ " vrf " ~ handler.trigger_on_maintenance.vrf %}
 {%                 endif %}
-{%             endfor %}
+{%             elif handler.trigger_on_maintenance.interface is arista.avd.defined %}
+{%                 set on_maintenance_cli = on_maintenance_cli ~ "interface " ~ handler.trigger_on_maintenance.interface %}
+{%             elif handler.trigger_on_maintenance.unit is arista.avd.defined %}
+{%                 set on_maintenance_cli = on_maintenance_cli ~ "unit " ~ handler.trigger_on_maintenance.unit %}
+{%             endif %}
 {%             if on_maintenance_cli %}
-{%                 set trigger_config =  "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation ~ " " ~ on_maintenance_cli | join(" ") %}
+{%                 set trigger_config =  "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation ~ " " ~ on_maintenance_cli %}
 {%                 if handler.trigger_on_maintenance.action is arista.avd.defined %}
 {%                     if handler.trigger_on_maintenance.action in ["after", "before"] and handler.trigger_on_maintenance.stage is arista.avd.defined %}
 {%                         set trigger_config = trigger_config ~ " " ~ handler.trigger_on_maintenance.action ~ " stage " ~ handler.trigger_on_maintenance.stage %}
