issue-4041: Added the support for IPv6 static neighbors

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
@@ -105,6 +105,8 @@
 {% include 'documentation/ip-dhcp-relay.j2' %}
 {# IPv6 DHCP Relay #}
 {% include 'documentation/ipv6-dhcp-relay.j2' %}
+{# IPv6 Neighbors #}
+{% include 'documentation/ipv6-neighbors.j2' %}
 {# IP DHCP Snooping #}
 {% include 'documentation/ip-dhcp-snooping.j2' %}
 {# IP NAT #}
