--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
@@ -255,6 +255,8 @@
 {% include 'eos/maintenance.j2' %}
 {# mlag configuration #}
 {% include 'eos/mlag-configuration.j2' %}
+{# IPv6 Neighbors #}
+{% include 'eos/ipv6-neighbors.j2' %}
 {# Static Route #}
 {% include 'eos/static-routes.j2' %}
 {# IPv6 Static Route #}
