--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
@@ -12,27 +12,23 @@ event-handler {{ handler.name }}
 {%             if handler.trigger is arista.avd.defined("on-maintenance")
                   and handler.trigger_on_maintenance.operation is arista.avd.defined
                   and handler.trigger_on_maintenance.action is arista.avd.defined %}
-{%                 set on_maintenance_cli = "" %}
+{%                 set trigger_cli =  "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation %}
 {%                 if handler.trigger_on_maintenance.bgp_peer is arista.avd.defined %}
-{%                     set on_maintenance_cli = on_maintenance_cli ~ "bgp " ~ handler.trigger_on_maintenance.bgp_peer %}
+{%                     set on_maintenance_cli = "bgp " ~ handler.trigger_on_maintenance.bgp_peer %}
 {%                     if handler.trigger_on_maintenance.vrf is arista.avd.defined %}
 {%                         set on_maintenance_cli = on_maintenance_cli ~ " vrf " ~ handler.trigger_on_maintenance.vrf %}
 {%                     endif %}
 {%                 elif handler.trigger_on_maintenance.interface is arista.avd.defined %}
-{%                     set on_maintenance_cli = on_maintenance_cli ~ "interface " ~ handler.trigger_on_maintenance.interface %}
+{%                     set on_maintenance_cli = "interface " ~ handler.trigger_on_maintenance.interface %}
 {%                 elif handler.trigger_on_maintenance.unit is arista.avd.defined %}
-{%                     set on_maintenance_cli = on_maintenance_cli ~ "unit " ~ handler.trigger_on_maintenance.unit %}
+{%                     set on_maintenance_cli = "unit " ~ handler.trigger_on_maintenance.unit %}
 {%                 endif %}
-{%                 if on_maintenance_cli %}
-{%                     set trigger_on_maintenance_cli =  "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation ~ " " ~ on_maintenance_cli %}
-{%                     if handler.trigger_on_maintenance.action is arista.avd.defined %}
-{%                         if handler.trigger_on_maintenance.action in ["after", "before"] and handler.trigger_on_maintenance.stage is arista.avd.defined %}
-{%                             set trigger_on_maintenance_cli = trigger_on_maintenance_cli ~ " " ~ handler.trigger_on_maintenance.action ~ " stage " ~ handler.trigger_on_maintenance.stage %}
-{%                         elif handler.trigger_on_maintenance.action in ["all", "begin", "end"] %}
-{%                             set trigger_on_maintenance_cli = trigger_on_maintenance_cli ~ " " ~ handler.trigger_on_maintenance.action %}
-{%                         endif %}
+{%                 if on_maintenance_cli is arista.avd.defined %}
+{%                     if handler.trigger_on_maintenance.action in ["after", "before"] and handler.trigger_on_maintenance.stage is arista.avd.defined %}
+   {{ trigger_cli }} {{ on_maintenance_cli }} {{ handler.trigger_on_maintenance.action }} stage {{ handler.trigger_on_maintenance.stage }}
+{%                     elif handler.trigger_on_maintenance.action in ["all", "begin", "end"] %}
+   {{ trigger_cli }} {{ on_maintenance_cli }} {{ handler.trigger_on_maintenance.action }}
 {%                     endif %}
-   {{ trigger_on_maintenance_cli }}
 {%                 endif %}
 {%             elif handler.trigger is arista.avd.defined("on-counters") %}
    trigger on-counters
