--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/dot1x.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/dot1x.j2
@@ -45,7 +45,7 @@
 {%             set framed_mtu = dot1x.radius_av_pair.framed_mtu | arista.avd.default('-') %}
 | {{ radius_av_pair_service }} | {{ framed_mtu }} |
 {%         endif %}
-{%         if dot1x.captive_portal is arista.avd.defined %}
+{%         if dot1x.captive_portal.enabled is arista.avd.defined(true) %}
 
 #### 802.1X Captive-portal authentication
 
