--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -223,18 +223,17 @@ router bgp {{ router_bgp.as }}
 {%             for direction in ['in', 'out'] %}
 {%                 set dir = 'direction_' ~ direction %}
 {%                 set policy = peer_group.missing_policy[dir] %}
-{%                 if policy.action is arista.avd.defined and policy.address_family_all is arista.avd.defined(true) %}
+{%                 if policy.action is arista.avd.defined %}
 {%                     set missing_policy_cli = "neighbor " ~ peer_group.name ~ " missing-policy address-family all" %}
-{%                     set include = peer_group.missing_policy[dir] %}
-{%                     if include.include_community_list is arista.avd.defined or include.include_prefix_list is arista.avd.defined or include.include_sub_route_map is arista.avd.defined %}
+{%                     if policy.include_community_list is arista.avd.defined or policy.include_prefix_list is arista.avd.defined or policy.include_sub_route_map is arista.avd.defined %}
 {%                         set missing_policy_cli = missing_policy_cli ~ " include" %}
-{%                         if include.include_community_list is arista.avd.defined %}
+{%                         if policy.include_community_list is arista.avd.defined %}
 {%                             set missing_policy_cli = missing_policy_cli ~ " community-list" %}
 {%                         endif %}
-{%                         if include.include_prefix_list is arista.avd.defined %}
+{%                         if policy.include_prefix_list is arista.avd.defined %}
 {%                             set missing_policy_cli = missing_policy_cli ~ " prefix-list" %}
 {%                         endif %}
-{%                         if include.include_sub_route_map is arista.avd.defined %}
+{%                         if policy.include_sub_route_map is arista.avd.defined %}
 {%                             set missing_policy_cli = missing_policy_cli ~ " sub-route-map" %}
 {%                         endif %}
 {%                     endif %}
@@ -412,16 +411,15 @@ router bgp {{ router_bgp.as }}
 {%                 set policy = neighbor.missing_policy[dir] %}
 {%                 if policy.action is arista.avd.defined and policy.address_family_all is arista.avd.defined(true) %}
 {%                     set missing_policy_cli = "neighbor " ~ neighbor.ip_address ~ " missing-policy address-family all" %}
-{%                     set include = neighbor.missing_policy[dir] %}
-{%                     if include.include_community_list is arista.avd.defined or include.include_prefix_list is arista.avd.defined or include.include_sub_route_map is arista.avd.defined %}
+{%                     if policy.include_community_list is arista.avd.defined or policy.include_prefix_list is arista.avd.defined or policy.include_sub_route_map is arista.avd.defined %}
 {%                         set missing_policy_cli = missing_policy_cli ~ " include" %}
-{%                         if include.include_community_list is arista.avd.defined %}
+{%                         if policy.include_community_list is arista.avd.defined %}
 {%                             set missing_policy_cli = missing_policy_cli ~ " community-list" %}
 {%                         endif %}
-{%                         if include.include_prefix_list is arista.avd.defined %}
+{%                         if policy.include_prefix_list is arista.avd.defined %}
 {%                             set missing_policy_cli = missing_policy_cli ~ " prefix-list" %}
 {%                         endif %}
-{%                         if include.include_sub_route_map is arista.avd.defined %}
+{%                         if policy.include_sub_route_map is arista.avd.defined %}
 {%                             set missing_policy_cli = missing_policy_cli ~ " sub-route-map" %}
 {%                         endif %}
 {%                     endif %}
