--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
@@ -81,18 +81,20 @@
 {%             endif %}
 {%             set trigger_config = trigger_config | join("<br>") %}
 {%         elif handler.trigger is arista.avd.defined("on-intf") %}
-{%             set trigger = [] %}
-{%             for intf_change in ['operstatus', 'ip', 'ipv6'] %}
-{%                 if handler.trigger_on_intf[intf_change] is arista.avd.defined(true) %}
-{%                     if intf_change == "ipv6" %}
-{%                         do trigger.append("ip6") %}
-{%                     else %}
-{%                         do trigger.append(intf_change) %}
-{%                     endif %}
+{%             if handler.trigger_on_intf.interface is arista.avd.defined and
+                (handler.trigger_on_intf.ip is arista.avd.defined(true) or
+                handler.trigger_on_intf.ipv6 is arista.avd.defined(true) or
+                handler.trigger_on_intf.operstatus is arista.avd.defined(true)) %}
+{%                 set trigger_config = "trigger on-intf " ~ handler.trigger_on_intf.interface %}
+{%                 if handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
+{%                     set trigger_config = trigger_config ~ " operstatus" %}
 {%                 endif %}
-{%             endfor %}
-{%             if trigger %}
-{%                 set trigger_config = "trigger on-intf " ~ handler.trigger_on_intf.interface ~ " " ~ trigger | join(" ") %}
+{%                 if handler.trigger_on_intf.ip is arista.avd.defined(true) %}
+{%                     set trigger_config = trigger_config ~ " ip" %}
+{%                 endif %}
+{%                 if handler.trigger_on_intf.ipv6 is arista.avd.defined(true) %}
+{%                     set trigger_config = trigger_config ~ " ip6" %}
+{%                 endif %}
 {%             endif %}
 {%         endif %}
 | {{ handler.name }} | {{ actions | arista.avd.default("-") }} | {{ handler.trigger | arista.avd.default("-") }} | {{ trigger_config | arista.avd.default("-") }} |
