--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
@@ -50,21 +50,21 @@ event-handler {{ handler.name }}
       regex {{ handler.trigger_on_logging.regex }}
 {%                 endif %}
 {%             elif handler.trigger is arista.avd.defined("on-intf") %}
-{%                 if handler.trigger_on_intf.interface is arista.avd.defined %}
-{%                     set trigger = [] %}
-{%                     for intf_change in ['operstatus', 'ip', 'ipv6'] %}
-{%                         if handler.trigger_on_intf[intf_change] is arista.avd.defined(true) %}
-{%                             if intf_change == "ipv6" %}
-{%                                 do trigger.append("ip6") %}
-{%                             else %}
-{%                                 do trigger.append(intf_change) %}
-{%                             endif %}
-{%                         endif %}
-{%                     endfor %}
-{%                     if trigger %}
-{%                         set trigger_on_intf_cli = "trigger on-intf " ~ handler.trigger_on_intf.interface ~ " " ~ trigger | join(" ") %}
-   {{ trigger_on_intf_cli }}
+{%                 if handler.trigger_on_intf.interface is arista.avd.defined and
+                     (handler.trigger_on_intf.ip is arista.avd.defined(true) or
+                     handler.trigger_on_intf.ipv6 is arista.avd.defined(true) or
+                     handler.trigger_on_intf.operstatus is arista.avd.defined(true)) %}
+{%                     set trigger_on_intf_cli = "trigger on-intf " ~ handler.trigger_on_intf.interface %}
+{%                     if handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
+{%                         set trigger_on_intf_cli = trigger_on_intf_cli ~ " operstatus" %}
 {%                     endif %}
+{%                     if handler.trigger_on_intf.ip is arista.avd.defined(true) %}
+{%                         set trigger_on_intf_cli = trigger_on_intf_cli ~ " ip" %}
+{%                     endif %}
+{%                     if handler.trigger_on_intf.ipv6 is arista.avd.defined(true) %}
+{%                         set trigger_on_intf_cli = trigger_on_intf_cli ~ " ip6" %}
+{%                     endif %}
+   {{ trigger_on_intf_cli }}
 {%                 endif %}
 {%             else %}
    trigger {{ handler.trigger }}
