Apply suggestions from code review
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/dot1x.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/dot1x.j2
@@ -66,7 +66,7 @@
 {%         endif %}
 {%         if dot1x.supplicant is arista.avd.defined %}
 
-#### 802.1X Dot1x supplicant
+#### 802.1X Supplicant
 
 | Attribute | Value |
 | --------- | ----- |
@@ -78,7 +78,7 @@
 {%             endif %}
 {%             if dot1x.supplicant.profiles is arista.avd.defined %}
 
-##### 802.1X Dot1x supplicant profiles
+##### 802.1X Supplicant profiles
 
 | Profile | EAP Method | Identity | SSL Profile |
 | ------- | ---------- | -------- | ----------- |
