add notes the right way

--- a/ansible_collections/arista/avd/docs/templates/plugin-docs.j2
+++ b/ansible_collections/arista/avd/docs/templates/plugin-docs.j2
@@ -115,7 +115,7 @@ The below requirements are needed on the host that executes this module.
 ## Notes
 
 {%     for note in notes %}
-- {{ note | e }}
+- {{ note | e | indent(2, false) }}
 {%     endfor %}
 {% endif %}
 {% if seealso %}
