Feat(eos_cli_config_gen): Add support to configure PEG DR election algorithm

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -1473,6 +1473,18 @@ router bgp {{ router_bgp.as }}
 {%         endif %}
 {%         if vrf.evpn_multicast is arista.avd.defined(true) %}
       evpn multicast
+{%             if vrf.evpn_multicast_gateway_dr_election_algorithm.hrw is arista.avd.defined(true) or vrf.evpn_multicast_gateway_dr_election_algorithm.modulus is arista.avd.defined(true)
+                   or vrf.evpn_multicast_gateway_dr_election_algorithm.preference is arista.avd.defined %}
+{%                 set election_cli = "gateway dr election algorithm" %}
+{%                 if vrf.evpn_multicast_gateway_dr_election_algorithm.hrw is arista.avd.defined(true) %}
+{%                     set election_cli = election_cli ~ " hrw" %}
+{%                 elif vrf.evpn_multicast_gateway_dr_election_algorithm.modulus is arista.avd.defined(true) %}
+{%                     set election_cli = election_cli ~ " modulus" %}
+{%                 else %}
+{%                     set election_cli = election_cli ~ " preference" ~ " " ~ vrf.evpn_multicast_gateway_dr_election_algorithm.preference %}
+{%                 endif %}
+         {{ election_cli }}
+{%             endif %}
 {%             if vrf.evpn_multicast_address_family.ipv4 is arista.avd.defined
                    and vrf.evpn_multicast_address_family.ipv4.transit is arista.avd.defined(true) %}
          address-family ipv4
