--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/event-handlers.j2
@@ -39,47 +39,52 @@
 {%         if handler.trigger is arista.avd.defined("on-maintenance")
             and handler.trigger_on_maintenance.operation is arista.avd.defined
             and handler.trigger_on_maintenance.action is arista.avd.defined %}
-{%             set trigger_config =  "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation %}
+{%             set trigger_cli =  "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation %}
 {%             if handler.trigger_on_maintenance.bgp_peer is arista.avd.defined %}
-{%                 set trigger_config = trigger_config ~ " bgp " ~ handler.trigger_on_maintenance.bgp_peer %}
+{%                 set on_maintenance_cli = "bgp " ~ handler.trigger_on_maintenance.bgp_peer %}
 {%                 if handler.trigger_on_maintenance.vrf is arista.avd.defined %}
-{%                     set trigger_config = trigger_config ~ " vrf " ~ handler.trigger_on_maintenance.vrf %}
+{%                     set on_maintenance_cli = on_maintenance_cli ~ " vrf " ~ handler.trigger_on_maintenance.vrf %}
 {%                 endif %}
 {%             elif handler.trigger_on_maintenance.interface is arista.avd.defined %}
-{%                 set trigger_config = trigger_config ~ " interface " ~ handler.trigger_on_maintenance.interface %}
+{%                 set on_maintenance_cli = "interface " ~ handler.trigger_on_maintenance.interface %}
 {%             elif handler.trigger_on_maintenance.unit is arista.avd.defined %}
-{%                 set trigger_config = trigger_config ~ " unit " ~ handler.trigger_on_maintenance.unit %}
+{%                 set on_maintenance_cli = "unit " ~ handler.trigger_on_maintenance.unit %}
 {%             endif %}
-{%             if handler.trigger_on_maintenance.action is arista.avd.defined("after") or handler.trigger_on_maintenance.action is arista.avd.defined("before") %}
-{%                 set trigger_config = trigger_config ~ " " ~ handler.trigger_on_maintenance.action ~ " stage " ~ handler.trigger_on_maintenance.stage %}
-{%             elif handler.trigger_on_maintenance.action is arista.avd.defined("all") %}
-{%                 set trigger_config = trigger_config ~ " all" %}
-{%             elif handler.trigger_on_maintenance.action is arista.avd.defined("begin") %}
-{%                 set trigger_config = trigger_config ~ " begin" %}
-{%             elif handler.trigger_on_maintenance.action is arista.avd.defined("end") %}
-{%                 set trigger_config = trigger_config ~ " end" %}
+{%             if on_maintenance_cli is arista.avd.defined %}
+{%                 if handler.trigger_on_maintenance.action is arista.avd.defined %}
+{%                     if handler.trigger_on_maintenance.action in ["after", "before"] and handler.trigger_on_maintenance.stage is arista.avd.defined %}
+{%                         set trigger_config = trigger_cli ~ " " ~ on_maintenance_cli ~ " " ~ handler.trigger_on_maintenance.action ~ " stage " ~ handler.trigger_on_maintenance.stage %}
+{%                     elif handler.trigger_on_maintenance.action in ["all", "begin", "end"] %}
+{%                         set trigger_config = trigger_cli ~ " " ~ on_maintenance_cli ~ " " ~ handler.trigger_on_maintenance.action %}
+{%                     endif %}
+{%                 endif %}
 {%             endif %}
-{%         elif handler.trigger is arista.avd.defined("on-counters") %}
+{%         elif handler.trigger is arista.avd.defined("on-counters") and handler.trigger_on_counters is arista.avd.defined %}
+{%             set trigger_config = [] %}
 {%             if handler.trigger_on_counters.poll_interval is arista.avd.defined %}
-{%                 set trigger_config = "poll interval " ~ handler.trigger_on_counters.poll_interval %}
+{%                 do trigger_config.append("poll interval " ~ handler.trigger_on_counters.poll_interval) %}
 {%             endif %}
 {%             if handler.trigger_on_counters.condition is arista.avd.defined %}
-{%                 set trigger_config = trigger_config ~ "<br>condition" ~ handler.trigger_on_counters.condition %}
+{%                 do trigger_config.append("condition " ~ handler.trigger_on_counters.condition) %}
 {%             endif %}
 {%             if handler.trigger_on_counters.granularity_per_source is arista.avd.defined(true) %}
-{%                 set trigger_config = trigger_config ~ "<br>granularity per-source" %}
+{%                 do trigger_config.append("granularity per-source") %}
 {%             endif %}
-{%         elif handler.trigger is arista.avd.defined("on-logging") %}
+{%             set trigger_config = trigger_config | join("<br>") %}
+{%         elif handler.trigger is arista.avd.defined("on-logging") and handler.trigger_on_logging is arista.avd.defined %}
+{%             set trigger_config = [] %}
 {%             if handler.trigger_on_logging.poll_interval is arista.avd.defined %}
-{%                 set trigger_config = "poll interval " ~ handler.trigger_on_logging.poll_interval %}
+{%                 do trigger_config.append("poll interval " ~ handler.trigger_on_logging.poll_interval) %}
 {%             endif %}
 {%             if handler.trigger_on_logging.regex is arista.avd.defined %}
-{%                 set trigger_config = trigger_config ~ "<br>regex " ~ handler.trigger_on_logging.regex %}
+{%                 do trigger_config.append("regex " ~ handler.trigger_on_logging.regex) %}
 {%             endif %}
-{%         elif handler.trigger is arista.avd.defined("on-intf") and handler.trigger_on_intf.interface is arista.avd.defined %}
-{%             if handler.trigger_on_intf.ip is arista.avd.defined(true) or
+{%             set trigger_config = trigger_config | join("<br>") %}
+{%         elif handler.trigger is arista.avd.defined("on-intf") %}
+{%             if handler.trigger_on_intf.interface is arista.avd.defined and
+                (handler.trigger_on_intf.ip is arista.avd.defined(true) or
                 handler.trigger_on_intf.ipv6 is arista.avd.defined(true) or
-                handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
+                handler.trigger_on_intf.operstatus is arista.avd.defined(true)) %}
 {%                 set trigger_config = "trigger on-intf " ~ handler.trigger_on_intf.interface %}
 {%                 if handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
 {%                     set trigger_config = trigger_config ~ " operstatus" %}
