--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
@@ -12,27 +12,24 @@ event-handler {{ handler.name }}
 {%             if handler.trigger is arista.avd.defined("on-maintenance")
                   and handler.trigger_on_maintenance.operation is arista.avd.defined
                   and handler.trigger_on_maintenance.action is arista.avd.defined %}
-{%                 set trigger_on_manitenance_cli =  "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation %}
+{%                 set trigger_cli =  "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation %}
 {%                 if handler.trigger_on_maintenance.bgp_peer is arista.avd.defined %}
-{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " bgp " ~ handler.trigger_on_maintenance.bgp_peer %}
+{%                     set on_maintenance_cli = "bgp " ~ handler.trigger_on_maintenance.bgp_peer %}
 {%                     if handler.trigger_on_maintenance.vrf is arista.avd.defined %}
-{%                         set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " vrf " ~ handler.trigger_on_maintenance.vrf %}
+{%                         set on_maintenance_cli = on_maintenance_cli ~ " vrf " ~ handler.trigger_on_maintenance.vrf %}
 {%                     endif %}
 {%                 elif handler.trigger_on_maintenance.interface is arista.avd.defined %}
-{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " interface " ~ handler.trigger_on_maintenance.interface %}
+{%                     set on_maintenance_cli = "interface " ~ handler.trigger_on_maintenance.interface %}
 {%                 elif handler.trigger_on_maintenance.unit is arista.avd.defined %}
-{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " unit " ~ handler.trigger_on_maintenance.unit %}
+{%                     set on_maintenance_cli = "unit " ~ handler.trigger_on_maintenance.unit %}
 {%                 endif %}
-{%                 if handler.trigger_on_maintenance.action is arista.avd.defined("after") or handler.trigger_on_maintenance.action is arista.avd.defined("before") %}
-{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " " ~ handler.trigger_on_maintenance.action ~ " stage " ~ handler.trigger_on_maintenance.stage %}
-{%                 elif handler.trigger_on_maintenance.action is arista.avd.defined("all") %}
-{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " all" %}
-{%                 elif handler.trigger_on_maintenance.action is arista.avd.defined("begin") %}
-{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " begin" %}
-{%                 elif handler.trigger_on_maintenance.action is arista.avd.defined("end") %}
-{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " end" %}
+{%                 if on_maintenance_cli is arista.avd.defined %}
+{%                     if handler.trigger_on_maintenance.action in ["after", "before"] and handler.trigger_on_maintenance.stage is arista.avd.defined %}
+   {{ trigger_cli }} {{ on_maintenance_cli }} {{ handler.trigger_on_maintenance.action }} stage {{ handler.trigger_on_maintenance.stage }}
+{%                     elif handler.trigger_on_maintenance.action in ["all", "begin", "end"] %}
+   {{ trigger_cli }} {{ on_maintenance_cli }} {{ handler.trigger_on_maintenance.action }}
+{%                     endif %}
 {%                 endif %}
-   {{ trigger_on_manitenance_cli }}
 {%             elif handler.trigger is arista.avd.defined("on-counters") %}
    trigger on-counters
 {%                 if handler.trigger_on_counters.poll_interval is arista.avd.defined %}
@@ -52,10 +49,11 @@ event-handler {{ handler.name }}
 {%                 if handler.trigger_on_logging.regex is arista.avd.defined %}
       regex {{ handler.trigger_on_logging.regex }}
 {%                 endif %}
-{%             elif handler.trigger is arista.avd.defined("on-intf") and handler.trigger_on_intf.interface is arista.avd.defined %}
-{%                 if handler.trigger_on_intf.ip is arista.avd.defined(true) or
+{%             elif handler.trigger is arista.avd.defined("on-intf") %}
+{%                 if handler.trigger_on_intf.interface is arista.avd.defined and
+                     (handler.trigger_on_intf.ip is arista.avd.defined(true) or
                      handler.trigger_on_intf.ipv6 is arista.avd.defined(true) or
-                     handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
+                     handler.trigger_on_intf.operstatus is arista.avd.defined(true)) %}
 {%                     set trigger_on_intf_cli = "trigger on-intf " ~ handler.trigger_on_intf.interface %}
 {%                     if handler.trigger_on_intf.operstatus is arista.avd.defined(true) %}
 {%                         set trigger_on_intf_cli = trigger_on_intf_cli ~ " operstatus" %}
