--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/routing.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/routing.j2
@@ -36,6 +36,8 @@
 {%     include 'documentation/static-routes.j2' %}
 {## IPv6 Static Routes #}
 {%     include 'documentation/ipv6-static-routes.j2' %}
+{## IPv6 Neighbors #}
+{%     include 'documentation/ipv6-neighbors.j2' %}
 {## ARP #}
 {%     include 'documentation/arp.j2' %}
 {## Router Adaptive Virtual Topology #}
