--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ipv6-neighbors.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ipv6-neighbors.j2
@@ -4,21 +4,26 @@
  that can be found in the LICENSE file.
 #}
 {# eos - ipv6 neighbors #}
-{% if ipv6_neighbor.cache is arista.avd.defined or ipv6_neighbor.persistent is arista.avd.defined or ipv6_neighbor.static_entries is arista.avd.defined %}
+{% if ipv6_neighbor.cache_persistent is arista.avd.defined(true) or ipv6_neighbor.persistent.enabled is arista.avd.defined(true) or ipv6_neighbor.static_entries is arista.avd.defined %}
 !
-{%     if ipv6_neighbor.cache is arista.avd.defined(true) %}
+{%     if ipv6_neighbor.cache_persistent is arista.avd.defined(true) %}
 ipv6 neighbor cache persistent
 {%     endif %}
-{%     if ipv6_neighbor.persistent is arista.avd.defined(true) %}
-ipv6 neighbor persistent refresh-delay {{ ipv6_neighbor.refresh_delay | arista.avd.default('600') }}
+{%     if ipv6_neighbor.persistent.enabled is arista.avd.defined(true) %}
+{%         set persistent_cli = "ipv6 neighbor persistent" %}
+{%         if ipv6_neighbor.persistent.refresh_delay is arista.avd.defined %}
+{%             set persistent_cli = persistent_cli ~ " refresh-delay " ~ ipv6_neighbor.persistent.refresh_delay %}
+{%         endif %}
+{{ persistent_cli }}
 {%     endif %}
 {%     if ipv6_neighbor.static_entries is arista.avd.defined %}
 {%         for neighbor in ipv6_neighbor.static_entries %}
-{%             if neighbor.ipv6_address is arista.avd.defined and neighbor.interface is arista.avd.defined and neighbor.mac_address is arista.avd.defined %}
+{%             if neighbor.ipv6_address is arista.avd.defined and neighbor.interfaces is arista.avd.defined and neighbor.mac_address is arista.avd.defined %}
+{%                 set neighbor_cli = neighbor.ipv6_address ~ " " ~ interface ~ " " ~ neighbor.mac_address %}
 {%                 if neighbor.vrf is arista.avd.defined %}
-{%                     set neighbor_cli = "ipv6 neighbor vrf " ~ neighbor.vrf ~ " " ~ neighbor.ipv6_address ~ " " ~ neighbor.interface ~ " " ~ neighbor.mac_address %}
+{%                     set neighbor_cli = "ipv6 neighbor vrf " ~ neighbor.vrf ~ " " ~ neighbor_cli  %}
 {%                 else %}
-{%                     set neighbor_cli = "ipv6 neighbor " ~ neighbor.ipv6_address ~ " " ~ neighbor.interface ~ " " ~ neighbor.mac_address %}
+{%                     set neighbor_cli = "ipv6 neighbor " ~ neighbor_cli %}
 {%                 endif %}
 {{ neighbor_cli }}
 {%             endif %}
