Feat(eos_cli_config_gen): Add support for permit response traffic nat under ip acls

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/access-lists.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/access-lists.j2
@@ -23,6 +23,10 @@ ACL has counting mode `counters per-entry` enabled!
 | {{ sequence.sequence }} | {{ sequence.action }} |
 {%         endfor %}
 
+{%         if access_list.permit_response_traffic is arista.avd.defined %}
+
+ACL has permit response traffic rule `permit response traffic nat` enabled!
+{%         endif %}
 {%     endfor %}
 #### Extended Access-lists Device Configuration
 
